styling and front end changes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,39 +1,18 @@
+:root {
+  /* Color Theme Swatches in Hex */
+  --white: #fff;
+  --dark-blue: #161459;
+  --black-blue: #010326;
+  --blue: #192959;
+  --light-blue: #3C74A6;
+  --green: #5ABFAD;
+}
+
 .App {
+  background-color: var(--black-blue);
   text-align: left;
   margin: 0 auto;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  color: var(--white);
 }
